fix for jdk9